force-app/main/default/objects/EntityMapping__mdt/EntityMapping__mdt.object-meta.xml
<CustomObject>
    <description>This Metadata is used for Validations and Object Field Mappings</description>
    <label>EntityMapping</label>
    <pluralLabel>EntityMappings</pluralLabel>
</CustomObject>