force-app/main/default/objects/EntityMapping__mdt/fields/Allow_Numeric__c.field-meta.xml
<CustomField>
    <fullName>Allow_Numeric__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Only allow numeric data to be entered</description>
    <label>Allow_Numeric</label>
    <type>Checkbox</type>
</CustomField>