force-app/main/default/objects/EntityMapping__mdt/fields/Allow_Numeric_Msg__c.field-meta.xml
<CustomField>
    <fullName>Allow_Numeric_Msg__c</fullName>
    <description>This field is used to show numeric validation error messages.</description>
    <label>AllowNumericMsg</label>
    <type>Picklist</type>
    <valueSet>
        
            <restricted>true</restricted>
        
            <valueSetDefinition>
            
            
                <value>
                
                    <fullName>Please enter only numerical values</fullName>
                
                    <default>true</default>
                
                    <label>Please enter only numerical values</label>
                
                </value>
            
                <value>
                
                    <fullName>NA</fullName>
                
                
                    <label>NA</label>
                
                </value>
            
                <value>
                
                    <fullName>Please enter a valid extension</fullName>
                
                
                    <label>Please enter a valid extension</label>
                
                </value>
            
                <value>
                
                    <fullName>Please enter only Numeric values</fullName>
                
                
                    <label>Please enter only Numeric values</label>
                
                </value>
            
            </valueSetDefinition>
        
        </valueSet>
</CustomField>