force-app/main/default/objects/EntityMapping__mdt/fields/Allow_Only_1_Selection__c.field-meta.xml
<CustomField>
    <fullName>Allow_Only_1_Selection__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is used to validate only one selection is made in checkbox</description>
    <label>Allow_Only_1_Selection</label>
    <type>Checkbox</type>
</CustomField>