force-app/main/default/objects/EntityMapping__mdt/fields/Allow_Only_1_Selection_Msg__c.field-meta.xml
<CustomField>
    <fullName>Allow_Only_1_Selection_Msg__c</fullName>
    <label>Allow_Only_1_Selection_Msg</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Please select only one option</fullName>
                <default>true</default>
                <label>Please select only one option</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>