force-app/main/default/objects/EntityMapping__mdt/fields/CompareDateValidator__c.field-meta.xml
<CustomField>
    <fullName>CompareDateValidator__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Compare Date Validator</label>
    <type>Checkbox</type>
</CustomField>