force-app/main/default/objects/EntityMapping__mdt/fields/CompareDateValidatorMessage__c.field-meta.xml
<CustomField>
    <fullName>CompareDateValidatorMessage__c</fullName>
    <label>Compare Date Validator Message</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>End Date should be greater than start date.</fullName>
                <default>true</default>
                <label>End Date should be greater than start date.</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>