force-app/main/default/objects/EntityMapping__mdt/fields/emailValidator__c.field-meta.xml
<CustomField>
    <fullName>emailValidator__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is used for Email format validation</description>
    <label>emailValidator</label>
    <type>Checkbox</type>
</CustomField>