force-app/main/default/objects/EntityMapping__mdt/fields/emailValidator_Msg__c.field-meta.xml
<CustomField>
    <fullName>emailValidator_Msg__c</fullName>
    <label>emailValidator_Msg</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Please enter email in correct format</fullName>
            </value>
            <value>
                <fullName>Please enter a valid email address in the following format: email@domain.com</fullName>
                <default>true</default>
                <label>Please enter a valid email address in the following format: email@domain.com</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>