force-app/main/default/objects/EntityMapping__mdt/fields/I94Validator__c.field-meta.xml
<CustomField>
    <fullName>I94Validator__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This checkbox is used as I94 validator</description>
    <label>I94Validator</label>
    <type>Checkbox</type>
</CustomField>