force-app/main/default/objects/EntityMapping__mdt/fields/I94Validator_Msg__c.field-meta.xml
<CustomField>
    <fullName>I94Validator_Msg__c</fullName>
    <label>I94Validator_Msg</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Please enter a valid I-94 Number with no special characters.</fullName>
                <default>true</default>
                <label>Please enter a valid I-94 Number with no special characters.</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>