force-app/main/default/objects/EntityMapping__mdt/fields/IllegalCharactersValidator__c.field-meta.xml
<CustomField>
    <fullName>IllegalCharactersValidator__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is used to apply illegal character validator</description>
    <label>IllegalCharactersValidator</label>
    <type>Checkbox</type>
</CustomField>