force-app/main/default/objects/EntityMapping__mdt/fields/IllegalCharactersValidator_AllowNumber__c.field-meta.xml
<CustomField>
    <fullName>IllegalCharactersValidator_AllowNumber__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is used to apply illegal character and allow number validator</description>
    <label>IllegalCharactersValidator_AllowNumber</label>
    <type>Checkbox</type>
</CustomField>