force-app/main/default/objects/EntityMapping__mdt/fields/IllegalCharactersValidator_Msg__c.field-meta.xml
<CustomField>
    <fullName>IllegalCharactersValidator_Msg__c</fullName>
    <label>IllegalCharactersValidator_Msg</label>
    <type>Picklist</type>
    <valueSet>
        
            <restricted>true</restricted>
        
            <valueSetDefinition>
            
            
                <value>
                
                    <fullName>Please enter data in correct format</fullName>
                
                    <default>true</default>
                
                    <label>Please enter data in correct format</label>
                
                </value>
            
                <value>
                
                    <fullName>Please enter valid characters.</fullName>
                
                
                    <label>Please enter valid characters.</label>
                
                </value>
            
                <value>
                
                    <fullName>Please enter either letter and numeric characters.</fullName>
                
                
                    <label>Please enter either letter and numeric characters.</label>
                
                </value>
            
                <value>
                
                    <fullName>Name fields must only have letters, &quot;-&quot; , &quot; &apos; &quot; or &quot; &quot;</fullName>
                
                
                    <label>Name fields must only have letters, &quot;-&quot; , &quot; &apos; &quot; or &quot; &quot;</label>
                
                </value>
            
            </valueSetDefinition>
        
        </valueSet>
</CustomField>