force-app/main/default/objects/EntityMapping__mdt/fields/ImmigrationNumberValidator__c.field-meta.xml
<CustomField>
    <fullName>ImmigrationNumberValidator__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This checkbox is used to validate immigration number</description>
    <label>ImmigrationNumberValidator</label>
    <type>Checkbox</type>
</CustomField>