force-app/main/default/objects/EntityMapping__mdt/fields/ImmigrationNumberValidator_Msg__c.field-meta.xml
<CustomField>
    <fullName>ImmigrationNumberValidator_Msg__c</fullName>
    <label>ImmigrationNumberValidator_Msg</label>
    <type>Picklist</type>
    <valueSet>
        
            <restricted>true</restricted>
        
            <valueSetDefinition>
            
            
                <value>
                
                    <fullName>Please enter a valid Card Number with 13 characters.</fullName>
                
                    <default>true</default>
                
                    <label>Please enter a valid Card Number with 13 characters.</label>
                
                </value>
            
            </valueSetDefinition>
        
        </valueSet>
</CustomField>