force-app/main/default/objects/EntityMapping__mdt/fields/Input_Numeric__c.field-meta.xml
<CustomField>
    <fullName>Input_Numeric__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Input Numeric Validation</description>
    <label>Input_Numeric</label>
    <type>Checkbox</type>
</CustomField>