force-app/main/default/objects/EntityMapping__mdt/fields/Input_Numeric_Msg__c.field-meta.xml
<CustomField>
    <fullName>Input_Numeric_Msg__c</fullName>
    <label>Input_Numeric_Msg</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Please enter only numerical values</fullName>
                <default>true</default>
                <label>Please enter only numerical values</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>