force-app/main/default/objects/EntityMapping__mdt/fields/Input_Required__c.field-meta.xml
<CustomField>
    <fullName>Input_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Handle required validation</description>
    <label>Input_Required</label>
    <type>Checkbox</type>
</CustomField>