force-app/main/default/objects/EntityMapping__mdt/fields/Input_Required_Msg__c.field-meta.xml
<CustomField>
    <fullName>Input_Required_Msg__c</fullName>
    <label>Input_Required_Msg</label>
    <type>Picklist</type>
    <valueSet>
        
            <restricted>true</restricted>
        
            <valueSetDefinition>
            
            
                <value>
                
                    <fullName>Please answer all required fields.</fullName>
                
                    <default>true</default>
                
                    <label>Please answer all required fields.</label>
                
                </value>
            
                <value>
                
                    <fullName>Please select at least one Preferred Contact Method.</fullName>
                
                
                    <label>Please select at least one Preferred Contact Method.</label>
                
                </value>
            
                <value>
                
                    <fullName>Please select at least one member.</fullName>
                
                
                    <label>Please select at least one member.</label>
                
                </value>
            
                <value>
                
                    <fullName>Please enter both the end date and reason for removal if you&apos;d like to end this type of coverage.</fullName>
                
                
                    <label>Please enter both the end date and reason for removal if you&apos;d like to end this type of coverage.</label>
                
                </value>
            
                <value>
                
                    <fullName>Please select at least one household member.</fullName>
                
                
                    <label>Please select at least one household member.</label>
                
                </value>
            
                <value>
                
                    <fullName>Please select at least one Policy Holder</fullName>
                
                
                    <label>Please select at least one Policy Holder</label>
                
                </value>
            
                <value>
                
                    <fullName>The address you selected is not a valid address. Please select a street address with valid Address Line 1, Zip Code and City</fullName>
                
                
                    <label>The address you selected is not a valid address. Please select a street address with valid Address Line 1, Zip Code and City</label>
                
                </value>
            
            </valueSetDefinition>
        
        </valueSet>
</CustomField>