force-app/main/default/objects/EntityMapping__mdt/fields/Is_Date_Future__c.field-meta.xml
<CustomField>
    <fullName>Is_Date_Future__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Handles Future Date Validation</description>
    <label>Is_Date_Future</label>
    <type>Checkbox</type>
</CustomField>