force-app/main/default/objects/EntityMapping__mdt/fields/Is_Date_Future_Msg__c.field-meta.xml
<CustomField>
    <fullName>Is_Date_Future_Msg__c</fullName>
    <label>Is_Date_Future_Msg</label>
    <type>Picklist</type>
    <valueSet>
        
            <restricted>true</restricted>
        
            <valueSetDefinition>
            
            
                <value>
                
                    <fullName>Future dates are not allowed</fullName>
                
                    <default>true</default>
                
                    <label>Future dates are not allowed</label>
                
                </value>
            
                <value>
                
                    <fullName>Date should be in the past. </fullName>
                
                
                    <label>Date should be in the past. </label>
                
                </value>
            
                <value>
                
                    <fullName>Date should be today or in the past. </fullName>
                
                
                    <label>Date should be today or in the past. </label>
                
                </value>
            
            </valueSetDefinition>
        
        </valueSet>
</CustomField>