force-app/main/default/objects/EntityMapping__mdt/fields/Is_Date_Past__c.field-meta.xml
<CustomField>
    <fullName>Is_Date_Past__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Past Date Validation</description>
    <label>Is_Date_Past</label>
    <type>Checkbox</type>
</CustomField>