force-app/main/default/objects/EntityMapping__mdt/fields/LessThanEqualToValidator__c.field-meta.xml
<CustomField>
    <fullName>LessThanEqualToValidator__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is used to validate maximum value</description>
    <label>LessThanEqualToValidator</label>
    <type>Checkbox</type>
</CustomField>