force-app/main/default/objects/EntityMapping__mdt/fields/LessThanEqualToValidator_Msg__c.field-meta.xml
<CustomField>
    <fullName>LessThanEqualToValidator_Msg__c</fullName>
    <label>LessThanEqualToValidator_Msg</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Please enter value less than or equal to {val}</fullName>
                <default>true</default>
                <label>Please enter value less than or equal to {val}</label>
            </value>
            <value>
                <fullName>Please enter an age between 0 and 21</fullName>
            </value>
            <value>
                <fullName>Please enter a value between $0 to ${val}.</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>