force-app/main/default/objects/EntityMapping__mdt/fields/NextCurrentYear_Validator__c.field-meta.xml
<CustomField>
    <fullName>NextCurrentYear_Validator__c</fullName>
    <defaultValue>false</defaultValue>
    <label>NextCurrentYear_Validator</label>
    <type>Checkbox</type>
</CustomField>