force-app/main/default/objects/EntityMapping__mdt/fields/NextCurrentYear_Validator_Msg__c.field-meta.xml
<CustomField>
    <fullName>NextCurrentYear_Validator_Msg__c</fullName>
    <label>NextCurrentYear_Validator_Msg</label>
    <type>Picklist</type>
    <valueSet>
        
            <restricted>true</restricted>
        
            <valueSetDefinition>
            
            
                <value>
                
                    <fullName>Plan start date can only be next or current year.</fullName>
                
                    <default>true</default>
                
                    <label>Plan start date can only be next or current year.</label>
                
                </value>
            
            </valueSetDefinition>
        
        </valueSet>
</CustomField>