force-app/main/default/objects/EntityMapping__mdt/fields/NonZeroValidator__c.field-meta.xml
<CustomField>
    <fullName>NonZeroValidator__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field checks for non zero validation for input value</description>
    <label>NonZeroValidator</label>
    <type>Checkbox</type>
</CustomField>