force-app/main/default/objects/EntityMapping__mdt/fields/NonZeroValidator_Msg__c.field-meta.xml
<CustomField>
    <fullName>NonZeroValidator_Msg__c</fullName>
    <label>NonZeroValidator_Msg</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Please enter  a value greater than zero</fullName>
                <default>true</default>
                <label>Please enter  a value greater than zero</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>