force-app/main/default/objects/EntityMapping__mdt/fields/NoZeroSpecialCharValidator__c.field-meta.xml
<CustomField>
    <fullName>NoZeroSpecialCharValidator__c</fullName>
    <defaultValue>false</defaultValue>
    <label>NoZeroSpecialCharValidator</label>
    <type>Checkbox</type>
</CustomField>