force-app/main/default/objects/EntityMapping__mdt/fields/NoZeroSpecialCharValidator_Msg__c.field-meta.xml
<CustomField>
    <fullName>NoZeroSpecialCharValidator_Msg__c</fullName>
    <label>NoZeroSpecialCharValidator_Msg</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Please enter a valid Alien Number with no special characters.</fullName>
                <default>true</default>
                <label>Please enter a valid Alien Number with no special characters.</label>
            </value>
            <value>
                <fullName>Please enter a valid SEVIS ID with no special characters.</fullName>
            </value>
            <value>
                <fullName>Please enter a valid Number with a maximum of 12 characters.</fullName>
            </value>
            <value>
                <fullName>Please enter a valid I-94 Number with no special characters.</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>