force-app/main/default/objects/EntityMapping__mdt/fields/PassportNumberValidator__c.field-meta.xml
<CustomField>
    <fullName>PassportNumberValidator__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This checkbox is used to validate Passport number</description>
    <label>PassportNumberValidator</label>
    <type>Checkbox</type>
</CustomField>