force-app/main/default/objects/EntityMapping__mdt/fields/PassportNumberValidator_Msg__c.field-meta.xml
<CustomField>
    <fullName>PassportNumberValidator_Msg__c</fullName>
    <description>This field contains validation messages for Passport Number field.</description>
    <label>PassportNumberValidator_Msg</label>
    <type>Picklist</type>
    <valueSet>
        
            <restricted>true</restricted>
        
            <valueSetDefinition>
            
            
                <value>
                
                    <fullName>Please enter a valid Number with a maximum of 12 characters.</fullName>
                
                    <default>true</default>
                
                    <label>Please enter a valid Number with a maximum of 12 characters.</label>
                
                </value>
            
            </valueSetDefinition>
        
        </valueSet>
</CustomField>