force-app/main/default/objects/EntityMapping__mdt/fields/Past_Date_Validation_Msg__c.field-meta.xml
<CustomField>
    <fullName>Past_Date_Validation_Msg__c</fullName>
    <label>Past_Date_Validation_Msg</label>
    <type>Picklist</type>
    <valueSet>
        
            <restricted>true</restricted>
        
            <valueSetDefinition>
            
            
                <value>
                
                    <fullName>Past Dates are not allowed</fullName>
                
                    <default>true</default>
                
                    <label>Past Dates are not allowed</label>
                
                </value>
            
                <value>
                
                    <fullName>Date should be today or in the past.</fullName>
                
                
                    <label>Date should be today or in the past.</label>
                
                </value>
            
                <value>
                
                    <fullName>Date should be today or in the future.</fullName>
                
                
                    <label>Date should be today or in the future.</label>
                
                </value>
            
            </valueSetDefinition>
        
        </valueSet>
</CustomField>