force-app/main/default/objects/EntityMapping__mdt/fields/Programs__c.field-meta.xml
<CustomField>
    <fullName>Programs__c</fullName>
    <description>Store comma separated programs</description>
    <label>Programs</label>
    <length>255</length>
    <type>Text</type>
</CustomField>