force-app/main/default/objects/EntityMapping__mdt/fields/ScreenName__c.field-meta.xml
<CustomField>
    <fullName>ScreenName__c</fullName>
    <description>This field is used for screen mapping</description>
    <label>Screen Name</label>
    <length>200</length>
    <type>Text</type>
</CustomField>