force-app/main/default/objects/EntityMapping__mdt/fields/SF_FieldAPI__c.field-meta.xml
<CustomField>
    <fullName>SF_FieldAPI__c</fullName>
    <description>This field is used to store Salesforce Field API Name</description>
    <label>SF FieldAPI</label>
    <length>150</length>
    <type>Text</type>
</CustomField>