force-app/main/default/objects/EntityMapping__mdt/fields/SF_ObjectAPI__c.field-meta.xml
<CustomField>
    <fullName>SF_ObjectAPI__c</fullName>
    <description>This field is used to store Salesforce Object Api Name</description>
    <label>SF ObjectAPI</label>
    <length>150</length>
    <type>Text</type>
</CustomField>