force-app/main/default/objects/EntityMapping__mdt/fields/SignatureMatchValidator__c.field-meta.xml
<CustomField>
    <fullName>SignatureMatchValidator__c</fullName>
    <defaultValue>false</defaultValue>
    <description>To match the input element value with the one passed in matchValue attribute</description>
    <label>Signature Match Validator</label>
    <type>Checkbox</type>
</CustomField>