force-app/main/default/objects/EntityMapping__mdt/fields/SignatureMatchValidator_Msg__c.field-meta.xml
<CustomField>
    <fullName>SignatureMatchValidator_Msg__c</fullName>
    <label>Signature Match Validator Msg</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Signature must match name of the primary applicant.</fullName>
                <default>true</default>
                <label>Signature must match name of the primary applicant.</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>