force-app/main/default/objects/EntityMapping__mdt/fields/Specify_Pattern__c.field-meta.xml
<CustomField>
    <fullName>Specify_Pattern__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Handles Specify Pattern Validator</description>
    <label>Specify_Pattern</label>
    <type>Checkbox</type>
</CustomField>