force-app/main/default/objects/EntityMapping__mdt/fields/Specify_Pattern_Msg__c.field-meta.xml
<CustomField>
    <fullName>Specify_Pattern_Msg__c</fullName>
    <label>Specify_Pattern_Msg</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Please enter data in correct format</fullName>
                <default>true</default>
                <label>Please enter data in correct format</label>
            </value>
            <value>
                <fullName>Only letters, numbers and the following special characters are allowed: (. , # - ‘ &amp; /)</fullName>
            </value>
            <value>
                <fullName>Please enter a valid EIN (Employer Identification Number).</fullName>
            </value>
            <value>
                <fullName>Please enter less than 4 characters</fullName>
            </value>
            <value>
                <fullName>Please enter valid characters.</fullName>
            </value>
            <value>
                <fullName>Please enter a value between $0 to $9999999999.99.</fullName>
            </value>
            <value>
                <fullName>Please enter a valid year.</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>