force-app/main/default/objects/EntityMapping__mdt/fields/SSNValidator__c.field-meta.xml
<CustomField>
    <fullName>SSNValidator__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Handles SSN Validation</description>
    <label>SSNValidator</label>
    <type>Checkbox</type>
</CustomField>