force-app/main/default/objects/EntityMapping__mdt/fields/SSNValidator_Msg__c.field-meta.xml
<CustomField>
    <fullName>SSNValidator_Msg__c</fullName>
    <label>SSNValidator_Msg</label>
    <type>Picklist</type>
    <valueSet>
        
            <restricted>true</restricted>
        
            <valueSetDefinition>
            
            
                <value>
                
                    <fullName>Please enter SSN in correct format</fullName>
                
                    <default>true</default>
                
                    <label>Please enter SSN in correct format</label>
                
                </value>
            
                <value>
                
                    <fullName>Please enter a valid 9-digit  Social Security Number</fullName>
                
                
                    <label>Please enter a valid 9-digit  Social Security Number</label>
                
                </value>
            
            </valueSetDefinition>
        
        </valueSet>
</CustomField>