force-app/main/default/objects/EntityMapping__mdt/fields/Used_for_SSPDC__c.field-meta.xml
<CustomField>
    <fullName>Used_for_SSPDC__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Used for SSPDC</label>
    <type>Checkbox</type>
</CustomField>