force-app/main/default/objects/EntityMapping__mdt/fields/Validate_AlphaNumeric__c.field-meta.xml
<CustomField>
    <fullName>Validate_AlphaNumeric__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used to identify if the string is alpha numeric and no special characters allowed.</description>
    <label>Validate AlphaNumeric</label>
    <type>Checkbox</type>
</CustomField>