force-app/main/default/objects/EntityMapping__mdt/fields/Validate_AlphaNumeric_Msg__c.field-meta.xml
<CustomField>
    <fullName>Validate_AlphaNumeric_Msg__c</fullName>
    <label>Validate AlphaNumeric Msg</label>
    <type>Picklist</type>
    <valueSet>
        
            <restricted>true</restricted>
        
            <valueSetDefinition>
            
            
                <value>
                
                    <fullName>Please enter either letter and numeric characters.</fullName>
                
                    <default>true</default>
                
                    <label>Please enter either letter and numeric characters.</label>
                
                </value>
            
            </valueSetDefinition>
        
        </valueSet>
</CustomField>