force-app/main/default/objects/EntityMapping__mdt/fields/Validate_AreaCode__c.field-meta.xml
<CustomField>
    <fullName>Validate_AreaCode__c</fullName>
    <defaultValue>false</defaultValue>
    <description>handle Validate Area Code validation</description>
    <label>Validate_AreaCode</label>
    <type>Checkbox</type>
</CustomField>