force-app/main/default/objects/EntityMapping__mdt/fields/Validate_AreaCode_Msg__c.field-meta.xml
<CustomField>
    <fullName>Validate_AreaCode_Msg__c</fullName>
    <label>Validate_AreaCode_Msg</label>
    <type>Picklist</type>
    <valueSet>
        
            <restricted>true</restricted>
        
            <valueSetDefinition>
            
            
                <value>
                
                    <fullName>Please enter correct area code</fullName>
                
                    <default>true</default>
                
                    <label>Please enter correct area code</label>
                
                </value>
            
            </valueSetDefinition>
        
        </valueSet>
</CustomField>