force-app/main/default/objects/EntityMapping__mdt/fields/Validate_Maxlength__c.field-meta.xml
<CustomField>
    <fullName>Validate_Maxlength__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is used to validate maxlength of input value</description>
    <label>Validate_Maxlength</label>
    <type>Checkbox</type>
</CustomField>